# coder-screensaver

./: .gitignore  LICENSE  README.md  pyproject.toml
coder_screensaver/: __init__.py
