[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coder-screensaver"
version = "0.1.0"
description = "Animated code screensaver with syntax highlighting - displays source code as if being typed in real-time"
readme = "README.md"
authors = [
    {name = "Sinan Islekdemir", email = "sinan@islekdemir.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Text Editors",
]
keywords = ["screensaver", "code", "syntax-highlighting", "terminal", "animation", "typing"]
dependencies = [
    "pygments>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sinanislekdemir/coder-screensaver"
Repository = "https://github.com/sinanislekdemir/coder-screensaver"
Issues = "https://github.com/sinanislekdemir/coder-screensaver/issues"

[project.scripts]
coder-screensaver = "coder_screensaver:main_wrapper"

[tool.setuptools]
packages = ["coder_screensaver"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
